k8s/namespace-rhub2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rhub2
  labels:
    name: rhub2
