k8s/shell-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s
    kompose.service.group: rhub2
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: shell
  name: shell
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: shell
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s
        kompose.service.group: rhub2
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/rhub-app-default: "true"
        io.kompose.service: shell
    spec:
      containers:
        - env:
            - name: PG_HOST
              value: server844543569.postgres.database.azure.com
            - name: PG_PASS_FILE
              value: /run/secrets/dbpass/dbpass
            - name: PG_USER
              value: rhub2
          image: rhub/rhub2-shell:0.0.9
          name: shell
          resources: {}
          volumeMounts:
            - mountPath: /run/secrets/dbpass
              name: dbpass
      restartPolicy: Always
      volumes:
        - name: dbpass
          secret:
            items:
              - key: dbpass
                path: dbpass
            secretName: dbpass
status: {}
