k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o k8s
    kompose.service.group: rhub2
    kompose.service.type: nodeport
    kompose.version: 1.31.2 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o k8s
        kompose.service.group: rhub2
        kompose.service.type: nodeport
        kompose.version: 1.31.2 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/rhub-app-default: "true"
        io.kompose.service: web
    spec:
      containers:
        - env:
            - name: NODE_ENV
              value: production
            - name: PG_HOST
              value: server844543569.postgres.database.azure.com
            - name: PG_PASS_FILE
              value: /run/secrets/dbpass/dbpass
            - name: PG_USER
              value: rhub2
            - name: PORT
              value: "3000"
          image: rhub/rhub2-web:0.0.14
          name: web
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /run/secrets/mailguntoken
              name: mailguntoken
            - mountPath: /run/secrets/ghappkey
              name: ghappkey
            - mountPath: /run/secrets/dbpass
              name: dbpass
            - mountPath: /uploads
              name: uploads
      restartPolicy: Always
      volumes:
        - name: mailguntoken
          secret:
            items:
              - key: mailguntoken
                path: mailguntoken
            secretName: mailguntoken
        - name: ghappkey
          secret:
            items:
              - key: ghappkey
                path: ghappkey
            secretName: ghappkey
        - name: dbpass
          secret:
            items:
              - key: dbpass
                path: dbpass
            secretName: dbpass
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads
status: {}
